fixes + collapse json

--- a/src/components/NumberInput.module.css
+++ b/src/components/NumberInput.module.css
@@ -1,4 +1,5 @@
 .field {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -22,6 +23,8 @@
     display: flex;
     justify-content: center;
     height: 30px;
+    overflow: hidden;
+    transition: height 0.3s;
 }
 .inner-container input {
     font-size: inherit;
@@ -57,7 +60,7 @@ input::-webkit-inner-spin-button {
     margin: 0;
     border-radius: 5px;
     flex-shrink: 0;
-    resize: vertical;
+    resize: none;
     text-wrap: nowrap;
     background-color: #111;
     color: #aaa;
